<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorSecondary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lyric_view"
            android:textColor="@color/colorPrimary"
            android:scrollbars="vertical"
            android:text=""
            android:textAlignment="center"
            android:padding="20dp"/>

    </FrameLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_dialog_box"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guess_input"
        android:hint="@string/input_hint"
        android:autofillHints="@string/input_hint"
        android:inputType="text"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/guess_button"
            android:layout_margin="5dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/guess_button"
            android:layout_centerVertical="true"
            android:text="@string/back_button"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            />

    </RelativeLayout>
</LinearLayout>