<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/lyrio_toolbar"
        android:background="@color/colorSecondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/lyrio_logo"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorSecondary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:paddingStart="40dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/score_text"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:paddingStart="2dp"
                android:paddingEnd="40dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/multiplier_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:paddingStart="40dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/multiplier_text"/>

            <TextView
                android:id="@+id/multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:paddingStart="2dp"
                android:paddingEnd="40dp"/>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MapsActivity"/>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp"
        android:background="@color/colorSecondary"
        android:gravity="center">



        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode_button"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"/>


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_mode_button"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_button"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorRed"
            app:strokeColor="@color/colorRed"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_button"
            android:layout_margin="5dp"
            android:textSize="12sp"/>

    </LinearLayout>
</LinearLayout>


